--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,7 @@ details:
         - "003250342881"
     slogan: This restaurant is the most fabulous restaurant of Bruges and surrounding areas. The owners are very humble.
 design:
-    colours: #don't forget the "#" in the implementation
-        accent: "745820"
-        light: "030201"
-        dark: "fafbfa"
+    colours: #don't forget the "#" in _includes/header.html
+        accent: "745820" #also change in _sass/_variables.scss
 sass:
     style: compressed
